# with-42seoul

./: .gitignore  README.md
bereal/apiserver/: pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
bereal/apiserver/accounts/: repositories.py  services.py  views.py
bereal/apiserver/accounts/tests/: factories.py  test_signup_api.py  test_signup_service.py
bereal/apiserver/apiserver/: urls.py
bereal/apiserver/apiserver/settings/: base.py
bereal/apiserver/posts/: models.py  repositories.py  services.py
bereal/apiserver/posts/migrations/: 0001_initial.py  0002_post.py
bereal/apiserver/posts/tests/: factories.py  test_posting_scheduler_service.py
bereal/frontend/: .envrc  .eslintrc.js  .prettierrc.js  craco.config.js  jest.config.js  package.json  setupTestsAfterEnv.ts  tsconfig.extends.json  tsconfig.json
bereal/frontend/__tests__/: App.test.tsx  SignUp.test.tsx  useSignUp.test.ts
bereal/frontend/src/: App.tsx  SignUp.tsx  index.tsx  reportWebVitals.ts  useSignUp.ts
